--- a/network/enlace.html
+++ b/network/enlace.html
@@ -75,7 +75,7 @@
                     <p>En LACP (Link Aggregation Control Protocol), todos los enlaces dentro de un grupo de agregación están activos y funcionan simultáneamente para aumentar el ancho de banda y proporcionar redundancia. Sin embargo, el comportamiento de los enlaces puede variar según la configuración del dispositivo y el protocolo.</p>
                     <p>En una configuración típica de LACP, todos los enlaces se utilizan para el tráfico de datos. Esto significa que, en condiciones normales, todos los enlaces en el grupo de agregación están en estado de envío (sending).</p>
                     <p>Si uno de los enlaces activos falla, LACP detectará automáticamente el fallo y redistribuirá el tráfico a los enlaces restantes en el grupo. Esto garantiza la continuidad del servicio y mejora la resiliencia.</p>
-                    <p>Al realizar un balanceo de carga es fundamental tener en cuenta un par de cosas en mente:</p>
+                    <p>Al realizar un balanceo de carga es fundamental tener un par de cosas en mente:</p>
                     <li><marcador class="resaltado5">Número de enlaces: </marcador>Se puede especificar cuántos enlaces físicos se van a agregar.</li>
                     <li><marcador class="resaltado5">Balanceo de carga: </marcador>Se pueden ajustar los algoritmos de balanceo de carga para distribuir el tráfico de manera eficiente entre los enlaces disponibles.</li>
                     <p>Existen varios métodos para realizar el balanceo de carga en un Port Channel, y la elección del método depende de varios factores, como el hardware del equipo, el tipo de tráfico y las políticas de diseño de red. Algunos de los métodos comunes de balanceo de carga en Port Channel son:</p>
