--- a/network/eigrp.html
+++ b/network/eigrp.html
@@ -131,7 +131,7 @@
                 </ul>
                 <p>En este caso, la wildcard 0.0.0.255 significa que los primeros tres octetos (192.168.1) deben coincidir exactamente, mientras que el último octeto (0-255) puede ser cualquier valor. Esto permitiría que cualquier dirección en el rango 192.168.1.0 a 192.168.1.255 fuera considerada.</p>
                 <div class="blog-image">
-                    <img src="media/eigrp10.png" alt="">
+                    <img src="media/eigrp10.jpg" alt="">
                 </div>
                 <h2>Configuración</h2>
                 <h6>Ejemplo 1</h6>
