--- a/network/rip.html
+++ b/network/rip.html
@@ -185,6 +185,8 @@ router rip
                     </div>
                 </div>
                 </ul>
+                <p>Para ver la configuración de RIP (Routing Information Protocol) en un router Cisco, puedes usar <marcador class="subrayado">show running-config | section router rip</marcador> para visualizar la configuración de RIP.</p>
+                <p>También puedes verificar la tabla de rutas de RIP con <marcador class="subrayado">show ip route rip</marcador>, o usar <marcador class="subrayado">show ip rip database</marcador> para ver estadísticas y detalles sobre el proceso RIP.</p>
                 <h3>Huawei</h3>
                 <p>A continuación se muestra la configuración correspondiente para los routers R1, R2 y R3 de Huawei.</p>
                 <ul>
