--- a/network/eigrp.html
+++ b/network/eigrp.html
@@ -130,7 +130,7 @@
                     <li><marcador class="resaltado8">Wildcard: </marcador>0.0.0.255</li>
                 </ul>
                 <p>En este caso, la wildcard 0.0.0.255 significa que los primeros tres octetos (192.168.1) deben coincidir exactamente, mientras que el último octeto (0-255) puede ser cualquier valor. Esto permitiría que cualquier dirección en el rango 192.168.1.0 a 192.168.1.255 fuera considerada.</p>
-                <div class="blog-image">
+                <div class="blog-image-grande">
                     <img src="media/eigrp10.jpg" alt="">
                 </div>
                 <h2>Configuración</h2>
@@ -196,6 +196,7 @@ router eigrp 1
                     </div>
                 </div>
                 </ul>
+                <p>uedes verificar la tabla de rutas de EIGRP con <marcador class="subrayado">show ip route eigrp</marcador>, o usar <marcador class="subrayado">show ip eigrp topology</marcador> para ver estadísticas y detalles sobre el proceso EIGRP.</p>
                 <h6>Ejemplo 2</h6>
                 <div class="blog-image-grande">
                     <img src="media/eigrp6.png" alt="">
