--- a/network/stp.html
+++ b/network/stp.html
@@ -92,7 +92,7 @@
                 <p>El proceso de reconfiguración en STP estándar es relativamente lento (puede tardar hasta 50 segundos), ya que el protocolo pasa por diferentes etapas (Blocking, Listening, Learning, Forwarding) antes de que el nuevo camino se active. Este comportamiento está diseñado para asegurar que no haya bucles durante el proceso de convergencia.</p>
                 <p>En versiones más avanzadas como RSTP (Rapid Spanning Tree Protocol), existe un rol de Alternate Port (puerto alternativo), que actúa como un "backup" para el Root Port en caso de fallo. Este puerto alternativo está listo para asumir la función de reenvío inmediatamente sin pasar por todas las etapas de recálculo, permitiendo una convergencia más rápida (en menos de 1 segundo en la mayoría de los casos). Similarmente, MSTP (Multiple Spanning Tree Protocol) también mejora la redundancia y velocidad en redes complejas.</p>
                 <div class="blog-image-grande">
-                    <img src="media/stp5.jpg" alt="">
+                    <img src="media/stp5.jpeg" alt="">
                 </div>
                 <h2>BPDUs</h2>
                 <p>Las Bridge Protocol Data Units (BPDUs) son mensajes fundamentales utilizados en el Spanning Tree Protocol (STP) para la gestión de la topología de red y la prevención de bucles. Estas unidades de datos son enviadas por los switches para intercambiar información sobre el estado de la red y determinar la estructura jerárquica de la misma.</p>
