--- a/network/stp.html
+++ b/network/stp.html
@@ -381,6 +381,9 @@ Switch(config)# copy running-config startup-config</code></pre>
                     </div>
                 </div>
                 </ul>
+                <div class="blog-image-grande">
+                    <img src="media/stp1.png" alt="">
+                </div>
             </div>
         </div>       
     </main>
