--- a/network/eigrp.html
+++ b/network/eigrp.html
@@ -196,7 +196,7 @@ router eigrp 1
                     </div>
                 </div>
                 </ul>
-                <p>uedes verificar la tabla de rutas de EIGRP con <marcador class="subrayado">show ip route eigrp</marcador>, o usar <marcador class="subrayado">show ip eigrp topology</marcador> para ver estadísticas y detalles sobre el proceso EIGRP.</p>
+                <p>Puedes verificar la tabla de rutas de EIGRP con <marcador class="subrayado">show ip route eigrp</marcador>, o usar <marcador class="subrayado">show ip eigrp topology</marcador> para ver estadísticas y detalles sobre el proceso EIGRP.</p>
                 <h6>Ejemplo 2</h6>
                 <div class="blog-image-grande">
                     <img src="media/eigrp6.png" alt="">
